grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                $.use_declaration,
                $.public_declaration,
                $.extern_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_statement,
                $.comptime_expression_statement,
            ),

        // =========================================================================
        // Comments
        // =========================================================================
        use_declaration: ($) =>
            seq(
                "use",
                optional(seq(field("alias", $.identifier), ":")),
                field("path", $.module_path),
                ";",
            ),

        module_path: ($) => sep1($.identifier, "."),

        // pub <declaration>
        type_alias_declaration: ($) =>
            seq(
                "def",
                field("name", $.identifier),
                ":",
                field("type", $._type),
                ";",
            ),

        // rec Name[T, U] { field: type; ... }
        record_declaration: ($) =>
            seq(
                "rec",
                field("name", $.identifier),
                optional($.type_parameters),
                $.field_declaration_list,
            ),

        // uni Name[T, U] { variant: type; ... }
        union_declaration: ($) =>
            seq(
                "uni",
                field("name", $.identifier),
                optional($.type_parameters),
                $.field_declaration_list,
            ),

        field_declaration_list: ($) =>
            seq("{", repeat($.field_declaration), "}"),

        field_declaration: ($) =>
            seq(field("name", $.identifier), ":", field("type", $._type), ";"),

        type_parameters: ($) => seq("[", sep1($.identifier, ","), "]"),

        // val name: type = expr;
        value_declaration: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                ":",
                field("type", $._type),
                "=",
                field("value", $._expression),
                ";",
            ),

        // var name: type [= expr];
        variable_declaration: ($) =>
            seq(
                "var",
                field("name", $.identifier),
                ":",
                field("type", $._type),
                optional(seq("=", field("value", $._expression))),
                ";",
            ),

        // fun [(receiver: type)] name[T](params) [return_type] { body }
        function_declaration: ($) =>
            seq(
                "fun",
                optional($.method_receiver),
                field("name", $.identifier),
                optional($.type_parameters),
                $.parameter_list,
                optional(field("return_type", $._type)),
                $.block,
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(sep1(choice($.parameter, $.variadic_parameter), ",")),
                ")",
            ),

        parameter: ($) =>
            seq(field("name", $.identifier), ":", field("type", $._type)),

        variadic_parameter: ($) => "...",

        // test "name" { body }
        test_declaration: ($) =>
            seq("test", field("name", $.string_literal), $.block),

        // =========================================================================
        // Compile-time constructs
        // =========================================================================

        // $if (cond) { ... } $or (cond) { ... } $or { ... }
        block: ($) => seq("{", repeat($._statement), "}"),

        _statement: ($) =>
            choice(
                $.value_declaration,
                $.variable_declaration,
                $.if_statement,
                $.for_statement,
                $.return_statement,
                $.break_statement,
                $.continue_statement,
                $.defer_statement,
                $.asm_statement,
                $.comptime_if_statement,
                $.comptime_expression_statement,
                // bare { ... } scope block
                $.block,
                $.expression_statement,
            ),

        return_statement: ($) => seq("ret", optional($._expression), ";"),

        // brk;
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.cast_expression,
                $.typed_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // _postfix_expression groups call, index, field access, and primary
        // atoms into a single left-recursive chain. This ensures the LR parser
        // keeps [ ( . as valid shifts after reducing an identifier, rather than
        // eagerly reducing through _expression into expression_statement.
        _postfix_expression: ($) =>
            choice(
                $.call_expression,
                $.index_expression,
                $.field_expression,
                $.parenthesized_expression,
                $._primary_expression,
            ),

        binary_expression: ($) => {
            const table = [
                [PREC.LOGICAL_OR, "||"],
                [PREC.LOGICAL_AND, "&&"],
                [PREC.BITWISE_OR, "|"],
                [PREC.BITWISE_XOR, "^"],
                [PREC.BITWISE_AND, "&"],
                [PREC.EQUALITY, choice("==", "!=")],
                [PREC.COMPARISON, choice("<", ">", "<=", ">=")],
                [PREC.SHIFT, choice("<<", ">>")],
                [PREC.TERM, choice("+", "-")],
                [PREC.FACTOR, choice("*", "/", "%")],
            ];

            return choice(
                ...table.map(([prec_level, operator]) =>
                    prec.left(
                        prec_level,
                        seq(
                            field("left", $._expression),
                            field("operator", operator),
                            field("right", $._expression),
                        ),
                    ),
                ),
            );
        },

        // !x, -x, ~x, ?x, @x
        field_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    ".",
                    field("field", $.identifier),
                ),
            ),

        // (expr)
        nil_literal: ($) => "nil",

        // =========================================================================
        // Types
        // =========================================================================

        _type: ($) =>
            choice(
                $.primitive_type,
                $.pointer_type,
                $.readonly_pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.type_identifier,
            ),

        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // *type
        pointer_type: ($) => prec.left(seq("*", $._type)),

        // &type
        array_type: ($) =>
            prec.left(
                seq(
                    "[",
                    field("size", $._expression),
                    "]",
                    field("element", $._type),
                ),
            ),

        // fun(params) return_type
        record_type: ($) => seq("rec", $.field_declaration_list),

        // Anonymous uni { ... } used as type
        type_identifier: ($) => sep1($.identifier, "."),

        // =========================================================================
        // Literals
        // =========================================================================

        // Integer literals: decimal, hex, binary, octal, with optional underscores
        // and optional numeric type suffix (u8, i64, f32, etc.)
        //
        // Examples: 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    // Hex with optional suffix
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Binary with optional suffix
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Octal with optional suffix
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Decimal with optional suffix
                    seq(/[0-9][0-9_]*/, optional(TYPE_SUFFIX)),
                ),
            ),

        // Float literals: must contain a decimal point, with optional exponent
        // and optional numeric type suffix.
        //
        // Examples: 3.14, 1.0, 0.5e10, 1.5E-3, 3.14f64, 1_000.5_0
        string_literal: ($) =>
            token(
                choice(
                    // Triple-quoted multiline string: """..."""
                    // Content can include newlines, single quotes, double quotes (as
                    // long as fewer than three in a row without backslash escape).
                    seq(
                        '"""',
                        repeat(
                            choice(
                                /\\./, // any escape sequence
                                /[^"\\]/, // any char except quote or backslash
                                /"[^"\\]/, // single quote followed by non-quote
                                /""[^"\\]/, // two quotes followed by non-quote
                            ),
                        ),
                        optional(/""/), // trailing quotes before the close
                        '"""',
                    ),
                    // Regular single-line string: "..."
                    seq(
                        '"',
                        repeat(
                            choice(
                                // Simple escape sequences
                                /\\['"\\ntr0]/,
                                // Hex escape: \xNN
                                /\\x[0-9a-fA-F]{2}/,
                                // Any character except backslash, double quote, and newline
                                /[^"\\\n]/,
                            ),
                        ),
                        '"',
                    ),
                ),
            ),

        // =========================================================================
        // Identifiers
        // =========================================================================

        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

/**
 * Comma-separated list of one or more items.
 */
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
